2012-01-30  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        Manual test of number of resize events emitted during page generation.
        https://bugs.webkit.org/show_bug.cgi?id=77212

        Is needed to test if too many resize events are send when using fixed
        layout, and needs to be a manual test because the test framework does
        not currently support testing fixed layout.

        Reviewed by Kenneth Rohde Christiansen.

        * ManualTests/resize-events.html: Added.

2012-01-29  Zoltan Herczeg  <zherczeg@webkit.org>

        Custom written CSS lexer
        https://bugs.webkit.org/show_bug.cgi?id=70107

        Reviewed by Antti Koivisto and Oliver Hunt.

        Remove tokenizer.cpp from intermediate sources.

        * wscript:

2012-01-27  Fady Samuel  <fsamuel@chromium.org>

        Rename shouldLayoutFixedElementsRelativeToFrame and make it a setting
        https://bugs.webkit.org/show_bug.cgi?id=76459

        Reviewed by Darin Fisher.

        * Source/autotools/symbols.filter:

2012-01-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add basic printing support to WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=76172

        Reviewed by Gustavo Noronha Silva.

        * configure.ac: Check whether GTK+ UNIX printing is available.

2012-01-27  ChangSeok Oh  <shivamidow@gmail.com>

        [EFL] SVG_FONT is not disabled when SVG is disabled.
        https://bugs.webkit.org/show_bug.cgi?id=77174

        Reviewed by Eric Seidel.

        SVG_FONTS should be disabled when SVG is disabled. Or else it causes build-break.
        Relocated checking ENABLE_GLIB_SUPPORT & ENABLE_VIDEO to avoid duplication.

        * Source/cmake/OptionsEfl.cmake:

2012-01-26  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed. Build fix, don't build some sources
        which appear to no longer be needed.

        * wscript:

2012-01-24  Ryosuke Niwa  <rniwa@webkit.org>

        Port Mozilla's Graph Server