@@ -1,0 +1,12 @@
+<h1>
+<input style='' type='text' value="undefined">
+<input style='-webkit-tap-highlight-color: rgb(255, 255, 255);' type='text' value="rgb(255, 255, 255)">
+<input style='-webkit-tap-highlight-color: rgb(0, 0, 0);' type='text' value="rgb(0, 0, 0)">
+<input style='-webkit-tap-highlight-color: rgba(0, 0, 0, 0);' type='text' value="rgba(0, 0, 0, 0)">
+<input style='-webkit-tap-highlight-color: rgb(255, 0, 0);' type='text' value="rgb(255, 0, 0)">
+<input style='-webkit-tap-highlight-color: rgba(255, 0, 0, 0.5);' type='text' value="rgba(255, 0, 0, 0.5)">
+<input style='-webkit-tap-highlight-color: rgba(255, 0, 0, 1);' type='text' value="rgba(255, 0, 0, 1)">
+<input style='-webkit-tap-highlight-color: rgba(255, 0, 0, 0);' type='text' value="rgba(255, 0, 0, 0)">
+<input style='-webkit-tap-highlight-color: rgba(0, 255, 0, 0.5);' type='text' value="rgba(0, 255, 0, 0.5)">
+<input style='-webkit-tap-highlight-color: rgba(0, 0, 255, 0.5);' type='text' value="rgba(0, 0, 255, 0.5)">
+</h1>
