@@ -1,0 +1,6 @@
+<body style="background-color: green">
+    <p>Two anchors, one around a pure image, the other around an image embedded in a div.</p>
+
+    <a href=""><img src="../resources/apple.jpg"></a>
+    <a href=""><div style="background-color: blue;"><img style="display: block; margin-left: auto; margin-right: auto;" src="../resources/apple.jpg"></div></a>
+</body>
